--- a/.github/workflows/docusaurus-deploy.yml
+++ b/.github/workflows/docusaurus-deploy.yml
@@ -348,7 +348,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Basilakis/basilakis.github.io
-          token: {% raw %}${{ secrets.DOCS_DEPLOY_TOKEN }}{% endraw %}
+          token: ${{ secrets.DOCS_DEPLOY_TOKEN }}
           path: target-repo
 
       - name: Create Pull Request
@@ -379,16 +379,16 @@ jobs:
           git add .
 
           echo "Committing changes..."
-          git commit -m "Deploy Documentation: {% raw %}${{ github.event.inputs.deploy_message }}{% endraw %}"
+          git commit -m "Deploy Documentation: ${{ github.event.inputs.deploy_message }}"
 
           echo "Pushing branch..."
           git push origin $BRANCH_NAME
 
           echo "Creating pull request..."
           # Create a pull request using GitHub CLI
-          gh auth login --with-token <<< "{% raw %}${{ secrets.DOCS_DEPLOY_TOKEN }}{% endraw %}"
+          gh auth login --with-token <<< "${{ secrets.DOCS_DEPLOY_TOKEN }}"
           gh pr create \
-            --title "Deploy Documentation: {% raw %}${{ github.event.inputs.deploy_message }}{% endraw %}" \
+            --title "Deploy Documentation: ${{ github.event.inputs.deploy_message }}" \
             --body "This PR was automatically created by the GitHub Actions workflow to update the documentation site.
 
 Changes included in this PR:
