--- a/.github/workflows/docusaurus-deploy.yml
+++ b/.github/workflows/docusaurus-deploy.yml
@@ -389,13 +389,7 @@ jobs:
           gh auth login --with-token <<< "${{ secrets.DOCS_DEPLOY_TOKEN }}"
           gh pr create \
             --title "Deploy Documentation: ${{ github.event.inputs.deploy_message }}" \
-            --body "This PR was automatically created by the GitHub Actions workflow to update the documentation site.
-
-Changes included in this PR:
-- Updated documentation from the latest changes in the kai repository
-- Triggered by manual workflow run
-
-Please review and merge to update the documentation site." \
+            --body "This PR was automatically created by the GitHub Actions workflow to update the documentation site. It includes updated documentation from the latest changes in the kai repository, triggered by a manual workflow run." \
             --repo Basilakis/basilakis.github.io \
             --head $BRANCH_NAME \
             --base gh-pages
