--- a/.github/workflows/docusaurus-deploy.yml
+++ b/.github/workflows/docusaurus-deploy.yml
@@ -143,120 +143,116 @@ jobs:
           </svg>' > static/img/logo.svg
 
           # Create sidebars.js file - simplified version without TypeScript annotations
-          cat > sidebars.js << EOF
-// Simple sidebars config without TypeScript annotations
-const sidebars = {
-  docs: [
-    {
-      type: 'category',
-      label: 'Introduction',
-      items: ['introduction'],
-    },
-    {
-      type: 'category',
-      label: 'Getting Started',
-      items: ['installation', 'configuration'],
-    },
-    {
-      type: 'category',
-      label: 'Features',
-      items: ['features-overview'],
-    },
-    {
-      type: 'category',
-      label: 'Prompts',
-      items: [
-        'prompt-library',
-        'prompt-abtesting-segmentation',
-        'prompt-advanced-features',
-        'prompt-management',
-        'prompt-success-tracking',
-      ],
-    },
-    {
-      type: 'category',
-      label: 'Deployment',
-      items: ['deployment-guide', 'kubernetes-architecture', 'cicd-pipeline'],
-    },
-    {
-      type: 'category',
-      label: 'Other',
-      items: ['admin-panel', 'queue-system', 'notification-webhook-system'],
-    },
-  ],
-};
-
-module.exports = sidebars;
-EOF
+          echo '// Simple sidebars config without TypeScript annotations' > sidebars.js
+          echo 'const sidebars = {' >> sidebars.js
+          echo '  docs: [' >> sidebars.js
+          echo '    {' >> sidebars.js
+          echo '      type: "category",' >> sidebars.js
+          echo '      label: "Introduction",' >> sidebars.js
+          echo '      items: ["introduction"],' >> sidebars.js
+          echo '    },' >> sidebars.js
+          echo '    {' >> sidebars.js
+          echo '      type: "category",' >> sidebars.js
+          echo '      label: "Getting Started",' >> sidebars.js
+          echo '      items: ["installation", "configuration"],' >> sidebars.js
+          echo '    },' >> sidebars.js
+          echo '    {' >> sidebars.js
+          echo '      type: "category",' >> sidebars.js
+          echo '      label: "Features",' >> sidebars.js
+          echo '      items: ["features-overview"],' >> sidebars.js
+          echo '    },' >> sidebars.js
+          echo '    {' >> sidebars.js
+          echo '      type: "category",' >> sidebars.js
+          echo '      label: "Prompts",' >> sidebars.js
+          echo '      items: [' >> sidebars.js
+          echo '        "prompt-library",' >> sidebars.js
+          echo '        "prompt-abtesting-segmentation",' >> sidebars.js
+          echo '        "prompt-advanced-features",' >> sidebars.js
+          echo '        "prompt-management",' >> sidebars.js
+          echo '        "prompt-success-tracking",' >> sidebars.js
+          echo '      ],' >> sidebars.js
+          echo '    },' >> sidebars.js
+          echo '    {' >> sidebars.js
+          echo '      type: "category",' >> sidebars.js
+          echo '      label: "Deployment",' >> sidebars.js
+          echo '      items: ["deployment-guide", "kubernetes-architecture", "cicd-pipeline"],' >> sidebars.js
+          echo '    },' >> sidebars.js
+          echo '    {' >> sidebars.js
+          echo '      type: "category",' >> sidebars.js
+          echo '      label: "Other",' >> sidebars.js
+          echo '      items: ["admin-panel", "queue-system", "notification-webhook-system"],' >> sidebars.js
+          echo '    },' >> sidebars.js
+          echo '  ],' >> sidebars.js
+          echo '};' >> sidebars.js
+          echo '' >> sidebars.js
+          echo 'module.exports = sidebars;' >> sidebars.js
 
           # Create Docusaurus config file - simplified version without TypeScript annotations
-          cat > docusaurus.config.js << EOF
-// Simple config without TypeScript annotations
-const config = {
-  title: "KAI Documentation",
-  tagline: "Comprehensive documentation for the KAI project",
-  favicon: "img/favicon.ico",
-  url: "https://basilakis.github.io",
-  baseUrl: "/",
-  organizationName: "Basilakis",
-  projectName: "basilakis.github.io",
-  trailingSlash: false,
-  onBrokenLinks: "warn",
-  onBrokenMarkdownLinks: "warn",
-  i18n: {
-    defaultLocale: "en",
-    locales: ["en"],
-  },
-  presets: [
-    [
-      "classic",
-      {
-        docs: {
-          sidebarPath: "./sidebars.js",
-          routeBasePath: "/",
-        },
-        blog: false,
-        theme: {
-          customCss: "./src/css/custom.css",
-        },
-      },
-    ],
-  ],
-  themeConfig: {
-    navbar: {
-      title: "KAI Documentation",
-      logo: {
-        alt: "KAI Logo",
-        src: "img/logo.svg",
-      },
-      items: [
-        {
-          href: "https://github.com/Basilakis/kai",
-          label: "GitHub",
-          position: "right",
-        },
-      ],
-    },
-    footer: {
-      style: "dark",
-      links: [
-        {
-          title: "More",
-          items: [
-            {
-              label: "GitHub",
-              href: "https://github.com/Basilakis/kai",
-            },
-          ],
-        },
-      ],
-      copyright: `Copyright © ${new Date().getFullYear()} KAI Project. Last updated: ${new Date().toISOString().split('T')[0]}. Built with Docusaurus.`,
-    },
-  },
-};
-
-module.exports = config;
-EOF
+          echo '// Simple config without TypeScript annotations' > docusaurus.config.js
+          echo 'const config = {' >> docusaurus.config.js
+          echo '  title: "KAI Documentation",' >> docusaurus.config.js
+          echo '  tagline: "Comprehensive documentation for the KAI project",' >> docusaurus.config.js
+          echo '  favicon: "img/favicon.ico",' >> docusaurus.config.js
+          echo '  url: "https://basilakis.github.io",' >> docusaurus.config.js
+          echo '  baseUrl: "/",' >> docusaurus.config.js
+          echo '  organizationName: "Basilakis",' >> docusaurus.config.js
+          echo '  projectName: "basilakis.github.io",' >> docusaurus.config.js
+          echo '  trailingSlash: false,' >> docusaurus.config.js
+          echo '  onBrokenLinks: "warn",' >> docusaurus.config.js
+          echo '  onBrokenMarkdownLinks: "warn",' >> docusaurus.config.js
+          echo '  i18n: {' >> docusaurus.config.js
+          echo '    defaultLocale: "en",' >> docusaurus.config.js
+          echo '    locales: ["en"],' >> docusaurus.config.js
+          echo '  },' >> docusaurus.config.js
+          echo '  presets: [' >> docusaurus.config.js
+          echo '    [' >> docusaurus.config.js
+          echo '      "classic",' >> docusaurus.config.js
+          echo '      {' >> docusaurus.config.js
+          echo '        docs: {' >> docusaurus.config.js
+          echo '          sidebarPath: "./sidebars.js",' >> docusaurus.config.js
+          echo '          routeBasePath: "/",' >> docusaurus.config.js
+          echo '        },' >> docusaurus.config.js
+          echo '        blog: false,' >> docusaurus.config.js
+          echo '        theme: {' >> docusaurus.config.js
+          echo '          customCss: "./src/css/custom.css",' >> docusaurus.config.js
+          echo '        },' >> docusaurus.config.js
+          echo '      },' >> docusaurus.config.js
+          echo '    ],' >> docusaurus.config.js
+          echo '  ],' >> docusaurus.config.js
+          echo '  themeConfig: {' >> docusaurus.config.js
+          echo '    navbar: {' >> docusaurus.config.js
+          echo '      title: "KAI Documentation",' >> docusaurus.config.js
+          echo '      logo: {' >> docusaurus.config.js
+          echo '        alt: "KAI Logo",' >> docusaurus.config.js
+          echo '        src: "img/logo.svg",' >> docusaurus.config.js
+          echo '      },' >> docusaurus.config.js
+          echo '      items: [' >> docusaurus.config.js
+          echo '        {' >> docusaurus.config.js
+          echo '          href: "https://github.com/Basilakis/kai",' >> docusaurus.config.js
+          echo '          label: "GitHub",' >> docusaurus.config.js
+          echo '          position: "right",' >> docusaurus.config.js
+          echo '        },' >> docusaurus.config.js
+          echo '      ],' >> docusaurus.config.js
+          echo '    },' >> docusaurus.config.js
+          echo '    footer: {' >> docusaurus.config.js
+          echo '      style: "dark",' >> docusaurus.config.js
+          echo '      links: [' >> docusaurus.config.js
+          echo '        {' >> docusaurus.config.js
+          echo '          title: "More",' >> docusaurus.config.js
+          echo '          items: [' >> docusaurus.config.js
+          echo '            {' >> docusaurus.config.js
+          echo '              label: "GitHub",' >> docusaurus.config.js
+          echo '              href: "https://github.com/Basilakis/kai",' >> docusaurus.config.js
+          echo '            },' >> docusaurus.config.js
+          echo '          ],' >> docusaurus.config.js
+          echo '        },' >> docusaurus.config.js
+          echo '      ],' >> docusaurus.config.js
+          echo '      copyright: `Copyright © ${new Date().getFullYear()} KAI Project. Last updated: ${new Date().toISOString().split("T")[0]}. Built with Docusaurus.`,' >> docusaurus.config.js
+          echo '    },' >> docusaurus.config.js
+          echo '  },' >> docusaurus.config.js
+          echo '};' >> docusaurus.config.js
+          echo '' >> docusaurus.config.js
+          echo 'module.exports = config;' >> docusaurus.config.js
 
           cd ..
 
@@ -266,57 +262,49 @@ EOF
           mkdir -p kai-docs-temp/docs
 
           # Create introduction.md
-          cat > kai-docs-temp/docs/introduction.md << EOF
----
-id: introduction
-title: "Introduction to KAI"
-sidebar_label: "Introduction"
-slug: /
----
-
-# Introduction to KAI
-
-Welcome to the KAI documentation. This documentation provides comprehensive information about the KAI platform, its features, and how to use it.
-EOF
+          echo '---' > kai-docs-temp/docs/introduction.md
+          echo 'id: introduction' >> kai-docs-temp/docs/introduction.md
+          echo 'title: "Introduction to KAI"' >> kai-docs-temp/docs/introduction.md
+          echo 'sidebar_label: "Introduction"' >> kai-docs-temp/docs/introduction.md
+          echo 'slug: /' >> kai-docs-temp/docs/introduction.md
+          echo '---' >> kai-docs-temp/docs/introduction.md
+          echo '' >> kai-docs-temp/docs/introduction.md
+          echo '# Introduction to KAI' >> kai-docs-temp/docs/introduction.md
+          echo '' >> kai-docs-temp/docs/introduction.md
+          echo 'Welcome to the KAI documentation. This documentation provides comprehensive information about the KAI platform, its features, and how to use it.' >> kai-docs-temp/docs/introduction.md
 
           # Create installation.md
-          cat > kai-docs-temp/docs/installation.md << EOF
----
-id: installation
-title: "Installation"
-sidebar_label: "Installation"
----
-
-# Installation
-
-This page provides instructions for installing the KAI platform.
-EOF
+          echo '---' > kai-docs-temp/docs/installation.md
+          echo 'id: installation' >> kai-docs-temp/docs/installation.md
+          echo 'title: "Installation"' >> kai-docs-temp/docs/installation.md
+          echo 'sidebar_label: "Installation"' >> kai-docs-temp/docs/installation.md
+          echo '---' >> kai-docs-temp/docs/installation.md
+          echo '' >> kai-docs-temp/docs/installation.md
+          echo '# Installation' >> kai-docs-temp/docs/installation.md
+          echo '' >> kai-docs-temp/docs/installation.md
+          echo 'This page provides instructions for installing the KAI platform.' >> kai-docs-temp/docs/installation.md
 
           # Create configuration.md
-          cat > kai-docs-temp/docs/configuration.md << EOF
----
-id: configuration
-title: "Configuration"
-sidebar_label: "Configuration"
----
-
-# Configuration
-
-This page provides instructions for configuring the KAI platform.
-EOF
+          echo '---' > kai-docs-temp/docs/configuration.md
+          echo 'id: configuration' >> kai-docs-temp/docs/configuration.md
+          echo 'title: "Configuration"' >> kai-docs-temp/docs/configuration.md
+          echo 'sidebar_label: "Configuration"' >> kai-docs-temp/docs/configuration.md
+          echo '---' >> kai-docs-temp/docs/configuration.md
+          echo '' >> kai-docs-temp/docs/configuration.md
+          echo '# Configuration' >> kai-docs-temp/docs/configuration.md
+          echo '' >> kai-docs-temp/docs/configuration.md
+          echo 'This page provides instructions for configuring the KAI platform.' >> kai-docs-temp/docs/configuration.md
 
           # Create features-overview.md
-          cat > kai-docs-temp/docs/features-overview.md << EOF
----
-id: features-overview
-title: "Features Overview"
-sidebar_label: "Features Overview"
----
-
-# Features Overview
-
-This page provides an overview of the features available in the KAI platform.
-EOF
+          echo '---' > kai-docs-temp/docs/features-overview.md
+          echo 'id: features-overview' >> kai-docs-temp/docs/features-overview.md
+          echo 'title: "Features Overview"' >> kai-docs-temp/docs/features-overview.md
+          echo 'sidebar_label: "Features Overview"' >> kai-docs-temp/docs/features-overview.md
+          echo '---' >> kai-docs-temp/docs/features-overview.md
+          echo '' >> kai-docs-temp/docs/features-overview.md
+          echo '# Features Overview' >> kai-docs-temp/docs/features-overview.md
+          echo '' >> kai-docs-temp/docs/features-overview.md
+          echo 'This page provides an overview of the features available in the KAI platform.' >> kai-docs-temp/docs/features-overview.md
 
       - name: Process readme files
         run: |
